alguns ajustes na home

--- a/sobrancelhas.html
+++ b/sobrancelhas.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bicicletas | Bikcraft</title>
-    <meta name="description" content="Bicicletas | Bikcraft.">
+    <title>Sobrancelhas | serviços</title>
+    <meta name="description" content="Serviços de estetica | sobrancelhas">
     <!-- estilos -->
-       <link rel="icon" href="./favicon.svg" type="image/svg+xml">
+    <link rel="shortcut icon" href="./logo2.png" type="image/x-icon">
     <link rel="preload" href="./css/style.css" as="style">
     <link rel="stylesheet" href="./css/style.css">
     <script>document.documentElement.classList.add('js')</script>
 </head>
 
-<body id="bicicletas">
+<body id="sobrancelhas">
     <header class="header-bg">
         <div class="header interface">
             <a href="./">
-                <img src="./img/bikcraft.svg" width="136" height="32" alt="logo">
+                <img src="./img/Ana-Paula-Beauty.svg" width="400" height="100" alt="logo">
             </a>
 
             <nav aria-label="primaria">
-                <ul class="menu-desktop header-menu font-1-m cor-0">
-                    <li><a href="./bicicletas.html">Bicicletas</a></li>
-                    <li><a href="./seguros.html">Seguros</a></li>
+                <ul class="header-menu font-1-m cor-0">
+                    <li><a href="./sobrancelhas.html">Sobrancelhas</a></li>
+                    <li><a href="./combos.html">Labios</a></li>
+                    <li><a href="./contato.html">Cursos</a></li>
                     <li><a href="./contato.html">Contato</a></li>
                 </ul>
             </nav>
