--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 
             <nav aria-label="primaria">
                 <ul class="header-menu font-1-m cor-0">
-                    <li><a href="./sobrancelhas.html">Sobrancelhas</a></li>
-                    <li><a href="./combos.html">Labios</a></li>
-                    <li><a href="./contato.html">Cursos</a></li>
-                    <li><a href="./contato.html">Contato</a></li>
+                    <li><a href="./">Sobrancelhas</a></li>
+                    <li><a href="./">Labios</a></li>
+                    <li><a href="./">Cursos</a></li>
+                    <li><a href="./">Contato</a></li>
                 </ul>
             </nav>
         </div>
@@ -239,9 +239,9 @@
                 <h3 class="font-2-l-b cor-0">Informações</h3>
                 <nav>
                     <ul class="font-1-m cor-1">
-                        <li><a href="./bicicletas.html">Sobrancelhas</a></li>
-                        <li><a href="./combos.html">Labios</a></li>
-                        <li><a href="./contato.html">Cursos</a></li>
+                        <li><a href="./">Sobrancelhas</a></li>
+                        <li><a href="./">Labios</a></li>
+                        <li><a href="./">Cursos</a></li>
                     </ul>
                 </nav>
             </div>
