add o botao do whatsapp

--- a/index.html
+++ b/index.html
@@ -248,6 +248,13 @@
             <p class=" footer-copy font-2-m cor-1">Ana Paula PMU 2023 © Alguns direitos reservados</p>
         </div>
     </footer>
+
+    <a href="https://api.whatsapp.com/send?phone=+5588981035530&text=Olá%2C+Ana%21%0A%0AGostaria+de+saber+sobre..." class="btn-whatsapp" target="_blank">
+        <img src="./img/icones/whatssapp.svg" alt="icone do whatssapp">
+        <span class="tooltip-text">Agende seu horário!</span>
+    </a>
+
+
     <script src="./js/plugins/simple-anime.js"></script>;
     <script src="./js/script.js"></script>
 </body>
