--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <h2 class="font-1-xxl cor-p5">Combos.</h2>
             <div class="combos-item-1">
                 <h3 class="font-1-xl cor-0">Sextou</h3>
-                <span class="font-1-xl cor-0">R$ 200,00 <span class="font-1-xs cor-1">em até 3x no cartão</span></span>
+                <span class="font-1-xl cor-0">R$ 200,00 <span class="font-1-xs cor-1">Em até 3x no cartão</span></span>
                 <ul class="font-2-m cor-0">
                     <li>Browlamination</li>
                     <li>Hydra Gloss</li>
