correção de texto

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     <li>1 retoque gratis*</li>
 
                 </ul>
-                <a class="btn-style-1" href="./orcamento.html">Inscreva-se</a>
+                <a class="btn-style-1" href="./orcamento.html">RESERVAR</a>
             </div>
         </div>
     </article>
