target _blank no link

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     <li>1 retoque gratis*</li>
 
                 </ul>
-                <a class="btn-style-1" href="https://api.whatsapp.com/send?phone=+5588981035530&text=Ol%C3%A1%2C+Ana%21%0A%0AGostaria+de+reservar+o+combo+Barbie%2C+como+funcionar%3F">RESERVAR</a>
+                <a class="btn-style-1" href="https://api.whatsapp.com/send?phone=+5588981035530&text=Ol%C3%A1%2C+Ana%21%0A%0AGostaria+de+reservar+o+combo+Barbie%2C+como+funcionar%3F" target="_blank">RESERVAR</a>
             </div>
         </div>
     </article>
