implementação do menu no site de ana paula mais a refatoração do codigo na section serviços

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 
             <nav aria-label="primaria">
                 <ul class="header-menu font-1-m cor-0">
-                    <li><a href="./">Sobrancelhas</a></li>
-                    <li><a href="./">Labios</a></li>
-                    <li><a href="./">Cursos</a></li>
-                    <li><a href="./">Contato</a></li>
+                    <li><a href="#servico">Seviços</a></li>
+                    <li><a href="#combos">Combos</a></li>
+                    <li><a href="#espaco">Espaço Ana Paula Beauty</a></li>
+                    <!-- <li><a href="">Cursos</a></li> -->
                 </ul>
             </nav>
         </div>
@@ -47,56 +47,41 @@
                     especializada em micropigmentação. Tenho mais de 6 anos de atuação nesse segmento, tendo realizado
                     milhares de atendimentos, inclusive de clientes internacionais. Busco constantemente me atualizar na
                     minha técnica e utilizar os produtos mais renomados do mercado.</p>
-                <a class="btn-style-1 .fadeInDown"
-                    href="https://api.whatsapp.com/send?phone=+5588981035530&text=Olá%2C+Ana%21%0A%0AGostaria+de+saber+sobre..."
-                    target="_blank" data-anime="600">Fala Comigo!</a>
+                <a class="btn-style-1 .fadeInDown" href="https://api.whatsapp.com/send?phone=+5588981035530&text=Olá%2C+Ana%21%0A%0AGostaria+de+saber+sobre..." target="_blank" data-anime="600">Fala Comigo!</a>
             </div>
             <picture data-anime="800" class=".fadeInDown">
 
-                <img src="img/fotos/img-intro.jpg" alt="bicicleta preta" width="1280" height="1600">
+                <img src="img/fotos/img-intro.jpg" alt="servico preta" width="1280" height="1600">
             </picture>
         </div>
     </main>
 
-    <article class="bicicletas-lista">
-        <h2 class="font-1-xxl interface cor-p1">Meus Serviços.</h2>
+    <article id="servico" class="lista-servico">
+        <h2 class="font-1-xxl interface cor-p1">Meus servicos.</h2>
 
-        <ul class="bicicletas-lista-items">
+        <ul class="lista-servico-items">
             <li>
-                <a href="./bicicletas/magic.html">
-                    <img src="./img/serviços/brow-lamination.jpg" width="920" height="1040"
-                        alt="procedimento brow lamination">
-                    <h3 class="font-1-xl">Brow lamination</h3>
-                    <span class="font-2-m cor-8">R$ 100,00</span>
-                </a>
+                <img src="./img/servicos/brow-lamination.jpg" width="920" height="1040" alt="procedimento brow lamination">
+                <h3 class="font-1-xl">Brow lamination</h3>
+                <span class="font-2-m cor-8">R$ 100,00</span>
             </li>
             <li>
-                <a href="./bicicletas/nimbus.html">
-                    <img src="./img/serviços/hydra-gloss.jpg" width="920" height="1040" alt="procedimento hydra-gloss">
-                    <h3 class="font-1-xl">Hydra gloss</h3>
-                    <span class="font-2-m cor-8">R$ 120,00</span>
-                </a>
+                <img src="./img/servicos/hydra-gloss.jpg" width="920" height="1040" alt="procedimento hydra-gloss">
+                <h3 class="font-1-xl">Hydra gloss</h3>
+                <span class="font-2-m cor-8">R$ 120,00</span>
             </li>
             <li>
-                <a href="./bicicletas/nebula.html">
-                    <img src="./img/serviços/micro-sobrancelhas.jpg" width="920" height="1040"
-                        alt="procedimento micro-sobrancelhas">
-                    <h3 class="font-1-xl">Microblading</h3>
-                    <span class="font-2-m cor-8">R$ 350,00*</span>
-                </a>
+                <img src="./img/servicos/micro-sobrancelhas.jpg" width="920" height="1040" alt="procedimento micro-sobrancelhas">
+                <h3 class="font-1-xl">Microblading</h3>
+                <span class="font-2-m cor-8">R$ 350,00*</span>
             </li>
             <li>
-                <a href="./bicicletas/nebula.html">
-                    <img src="./img/serviços/micro-labial.jpg" width="920" height="1040"
-                        alt="procedimento micro-labial">
-                    <h3 class="font-1-xl">Micro-labial</h3>
-                    <span class="font-2-m cor-8">R$ 350,00*</span>
-                </a>
+                <img src="./img/servicos/micro-labial.jpg" width="920" height="1040" alt="procedimento micro-labial">
+                <h3 class="font-1-xl">Micro-labial</h3>
+                <span class="font-2-m cor-8">R$ 350,00*</span>
             </li>
         </ul>
-        <a class="btn-style-1 .fadeInDown interface"
-        href="https://www.instagram.com/anapaula_pmu_artist/"
-        target="_blank" data-anime="600">Veja meu instagram</a>
+        <a class="btn-style-1 .fadeInDown interface" href="https://www.instagram.com/anapaula_pmu_artist/" target="_blank" data-anime="600">Veja meu instagram</a>
 
     </article>
 
@@ -108,7 +93,7 @@
                 </h2>
                 <p class="font-2-l cor-p4">No nosso estúdio de estética feminina, você encontra um espaço moderno,
                     confortável e acolhedor, onde pode cuidar da sua beleza e bem-estar com profissionais parceiros que
-                    são altamente qualificados e atenciosos. Oferecemos diversos serviços. Tudo isso com produtos de
+                    são altamente qualificados e atenciosos. Oferecemos diversos servicos. Tudo isso com produtos de
                     qualidade e equipamentos de última geração. Venha conhecer nosso atendimento personalizado e
                     diferenciado..</p>
 
@@ -136,7 +121,7 @@
     </article>
 
 
-    <article class="">
+    <article id="combos" class="">
         <div class="combos interface">
             <h2 class="font-1-xxl cor-p5">Combos.</h2>
             <div class="combos-item-1">
@@ -148,9 +133,7 @@
                     <li>Mimo da Ana</li>
 
                 </ul>
-                <a class="btn-style-2"
-                    href="https://api.whatsapp.com/send?phone=+5588981035530&text=Oi%2C+Ana%21%0A%0AGostaria+de+reserva+o+combo+Sextou%21"
-                    target="_blank">Reserva</a>
+                <a class="btn-style-2" href="https://api.whatsapp.com/send?phone=+5588981035530&text=Oi%2C+Ana%21%0A%0AGostaria+de+reserva+o+combo+Sextou%21" target="_blank">Reserva</a>
             </div>
             <div class="combos-item-2">
                 <h3 class="font-1-xl cor-p1">Barbie</h3>
@@ -167,7 +150,7 @@
         </div>
     </article>
 
-    <section class="studio" aria-label="studio">
+    <section id="espaco" class="studio" aria-label="studio">
         <div>
             <img src="./img/fotos/studio.jpg" width="1560" height="1360" alt="Casa rosa">
         </div>
@@ -189,10 +172,7 @@
     </section>
 
     <div class="localizacao">
-        <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3957.947407313381!2d-39.32941671453021!3d-7.246826180751166!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7a182728729c78d%3A0x4cdc9a3bdfa60a88!2sCenter%20Miss%20Belle!5e0!3m2!1spt-BR!2sbr!4v1701208913559!5m2!1spt-BR!2sbr"
-            width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3957.947407313381!2d-39.32941671453021!3d-7.246826180751166!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7a182728729c78d%3A0x4cdc9a3bdfa60a88!2sCenter%20Miss%20Belle!5e0!3m2!1spt-BR!2sbr!4v1701208913559!5m2!1spt-BR!2sbr" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <div class="lojas-conteudo">
             <h3 class="font-1-xl">Juazeiro do Norte</h3>
             <div class="lojas-dados font-2-s cor-8">
@@ -235,7 +215,7 @@
 
                 </div>
             </div>
-            <div class="footer-informacoes">
+            <!-- <div class="footer-informacoes">
                 <h3 class="font-2-l-b cor-0">Informações</h3>
                 <nav>
                     <ul class="font-1-m cor-1">
@@ -244,7 +224,7 @@
                         <li><a href="./">Cursos</a></li>
                     </ul>
                 </nav>
-            </div>
+            </div> -->
             <p class=" footer-copy font-2-m cor-1">Ana Paula PMU 2023 © Alguns direitos reservados</p>
         </div>
     </footer>
