--- a/bicicletas/magic.html
+++ b/bicicletas/magic.html
@@ -9,10 +9,10 @@
     <!-- estilos -->
     <link rel="icon" href="../favicon.svg" type="image/svg+xml">
     <link rel="stylesheet" href="../css/style.css">
-         <script>document.documentElement.classList.add('js')</script>
+    <script>document.documentElement.classList.add('js')</script>
 </head>
 
-<body id="bicicleta">
+<body id="servico">
     <header class="header-bg">
         <div class="header interface">
             <a href="../">
@@ -21,7 +21,7 @@
 
             <nav aria-label="primaria">
                 <ul class="menu-desktop header-menu font-1-m cor-0">
-                    <li><a href="../bicicletas.html">Bicicletas</a></li>
+                    <li><a href="../servico.html">servico</a></li>
                     <li><a href="../seguros.html">Seguros</a></li>
                     <li><a href="../contato.html">Contato</a></li>
                 </ul>
@@ -34,23 +34,23 @@
             <p class="font-2-xl cor-5">R$ 4999</p>
             <h1 class="font-1-xxl cor-0">magic Stark<span class="cor-p1">.</span></h1>
         </div>
-        <div class="bicicleta interface">
-            <div class="bicicleta-imgs">
-                <img src="../img/bicicleta/nimbus1.jpg" alt="">
-                <img src="../img/bicicleta/nimbus2.jpg" alt="">
-                <img src="../img/bicicleta/nimbus3.jpg" alt="">
+        <div class="servico interface">
+            <div class="servico-imgs">
+                <img src="../img/servico/nimbus1.jpg" alt="">
+                <img src="../img/servico/nimbus2.jpg" alt="">
+                <img src="../img/servico/nimbus3.jpg" alt="">
             </div>
-            <div class="bicicleta-conteudo">
+            <div class="servico-conteudo">
                 <p class="font-2-l cor-5">A magic Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem
                     equipada com os melhores acessórios, o que garante maior velocidade.</p>
-                <div class="bicicleta-comprar">
+                <div class="servico-comprar">
                     <a class="btn-style-1" href="../orcamento.html?tipo=bikcraft&produto=magic">Comprar Agora</a>
                     <span class="font-1-xs cor-6"><img src="../img/icones/entrega.svg" alt="">Entrega em 5 dias</span>
                     <span class="font-1-xs cor-6"><img src="../img/icones/estoque.svg" alt="">18 em estoque</span>
                 </div>
 
                 <h2 class="font-1-xs cor-0">Informações</h2>
-                <ul class="bicicleta-informacoes">
+                <ul class="servico-informacoes">
                     <li>
                         <img src="../img/icones/eletrica.svg" alt="">
                         <h3 class="font-1-m cor-0">Motor Elétrico</h3>
@@ -59,7 +59,7 @@
                     <li>
                         <img src="../img/icones/velocidade.svg" alt="">
                         <h3 class="font-1-m cor-0">50 km/h</h3>
-                        <p class="font-2-xs cor-5">A mais rápida bicicleta elétrica disponível hoje no mercado.</p>
+                        <p class="font-2-xs cor-5">A mais rápida servico elétrica disponível hoje no mercado.</p>
                     </li>
                     <li>
                         <img src="../img/icones/rastreador.svg" alt="">
@@ -74,7 +74,7 @@
                 </ul>
 
                 <h2 class="font-1-xs cor-0">Ficha técnica</h2>
-                <ul class="bicicleta-ficha font-2-s cor-4">
+                <ul class="servico-ficha font-2-s cor-4">
                     <li>Peso <span>9kg</span></li>
                     <li>Altura <span>60 cm</span></li>
                     <li>Largura <span>120 cm</span></li>
@@ -86,21 +86,21 @@
         </div>
 
     </main>
-    <article class="bicicletas-lista interface">
+    <article class="lista-servico interface">
         <h2 class="font-1-xxl ">escolha a sua<span class="cor-p1">.</span></h2>
 
-        <ul class="bicicletas-lista-items">
+        <ul class="lista-servico-items">
             <li>
-                <a href="./bicicletas/magic.html">
-                    <img src="../img/bicicletas/magic.jpg" alt="bicicleta Preta">
+                <a href="./servico/magic.html">
+                    <img src="../img/servico/magic.jpg" alt="servico Preta">
                     <h3 class="font-1-xl">Magic Might</h3>
                     <span class="font-2-m cor-8">R$ 2499</span>
                 </a>
             </li>
-       
+
             <li>
-                <a href="./bicicletas/nebula.html">
-                    <img src="../img/bicicletas/nebula.jpg" alt="bicicleta Preta">
+                <a href="./servico/nebula.html">
+                    <img src="../img/servico/nebula.jpg" alt="servico Preta">
                     <h3 class="font-1-xl">Nebula Cosmic</h3>
                     <span class="font-2-m cor-8">R$ 3999</span>
                 </a>
@@ -109,10 +109,10 @@
 
     </article>
 
-    <article class="seguro-bg"> 
+    <article class="seguro-bg">
         <div class="seguro interface">
             <div class="seguro-img">
-                <img  src="../img/fotos/seguros.jpg" alt="Pessoa parada em cima de uma bicicleta">
+                <img src="../img/fotos/seguros.jpg" alt="Pessoa parada em cima de uma servico">
             </div>
             <div class="seguro-conteudo">
                 <h2 class="font-1-xxl cor-0">Pedale mais tranquilo com o nosso <span class="cor-p1">seguro.</span></h2>
@@ -150,7 +150,7 @@
                 <h3 class="font-2-l-b cor-0">Informações</h3>
                 <nav>
                     <ul class="font-1-m cor-5">
-                        <li><a href="../bicicletas.html">Bicicletas</a></li>
+                        <li><a href="../servico.html">servico</a></li>
                         <li><a href="../seguros.html">Seguros</a></li>
                         <li><a href="../contato.html">Contato</a></li>
                         <li><a href="../termos.html">Termos e Condições</a></li>
@@ -160,7 +160,7 @@
             <p class=" footer-copy font-2-m cor-6">Bikcraft © Alguns direitos reservados</p>
         </div>
     </footer>
-   <script src="../js/script.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 
 </html>
