--- a/contato.html
+++ b/contato.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="./favicon.svg" type="image/svg+xml">
     <link rel="preload" href="./css/style.css" as="style">
     <link rel="stylesheet" href="./css/style.css">
-         <script>document.documentElement.classList.add('js')</script>
+    <script>document.documentElement.classList.add('js')</script>
 </head>
 
 <body id="contato">
@@ -22,7 +22,7 @@
 
             <nav aria-label="primaria">
                 <ul class="menu-desktop header-menu font-1-m cor-0">
-                    <li><a href="./bicicletas.html">Bicicletas</a></li>
+                    <li><a href="./servico.html">servico</a></li>
                     <li><a href="./seguros.html">Seguros</a></li>
                     <li><a href="./contato.html">Contato</a></li>
                 </ul>
@@ -115,7 +115,7 @@
                 <h3 class="font-1-xl">Crato</h3>
                 <div class="lojas-dados font-2-s cor-8">
                     <p>Rua Ali Perto, 25</p>
-                    <p>Crato  - CE</p>
+                    <p>Crato - CE</p>
                 </div>
                 <div class="lojas-dados font-2-s cor-8">
                     <a href="mailto:crato@bikcraft.com">crato@bikcraft.com</a>
@@ -152,7 +152,7 @@
                 <h3 class="font-2-l-b cor-0">Informações</h3>
                 <nav>
                     <ul class="font-1-m cor-5">
-                        <li><a href="./bicicletas.html">Bicicletas</a></li>
+                        <li><a href="./servico.html">servico</a></li>
                         <li><a href="./seguros.html">Seguros</a></li>
                         <li><a href="./contato.html">Contato</a></li>
                         <li><a href="./termos.html">Termos e Condições</a></li>
@@ -162,7 +162,7 @@
             <p class=" footer-copy font-2-m cor-6">Bikcraft © Alguns direitos reservados</p>
         </div>
     </footer>
-             <script src="./js/script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
