--- a/orcamento.html
+++ b/orcamento.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="./favicon.svg" type="image/svg+xml">
     <link rel="preload" href="./css/style.css" as="style">
     <link rel="stylesheet" href="./css/style.css">
-         <script>document.documentElement.classList.add('js')</script>
+    <script>document.documentElement.classList.add('js')</script>
 </head>
 
 <body id="orcamento">
@@ -22,7 +22,7 @@
 
             <nav aria-label="primaria">
                 <ul class="menu-desktop header-menu font-1-m cor-0">
-                    <li><a href="./bicicletas.html">Bicicletas</a></li>
+                    <li><a href="./servico.html">servico</a></li>
                     <li><a href="./seguros.html">Seguros</a></li>
                     <li><a href="./contato.html">Contato</a></li>
                 </ul>
@@ -50,41 +50,41 @@
 
                 <div class="orcamento-conteudo" id="orcamento-bikcraft">
                     <h2 class="font-1-xs cor-5">Escolha a sua</h2>
-                    
+
                     <input type="radio" name="produto" value="nimbus" id="nimbus">
                     <label for="ninbus">Nimbus Stark <span>R$ 4999</span></label>
                     <div class="orcamento-detalhes">
                         <ul class="font-1-xs cor-8">
-                           <li><img src="./img/icones/eletrica.svg" width="32" height="32" alt="">Motor Elétrico</li>
-                           <li><img src="./img/icones/carbono.svg" width="32" height="32" alt="">Fibra de Carbono</li>
-                           <li><img src="./img/icones/velocidade.svg" width="32" height="32" alt="">50 km/h</li>
-                           <li><img src="./img/icones/rastreador.svg" width="32" height="32" alt="">Rastreador</li>
+                            <li><img src="./img/icones/eletrica.svg" width="32" height="32" alt="">Motor Elétrico</li>
+                            <li><img src="./img/icones/carbono.svg" width="32" height="32" alt="">Fibra de Carbono</li>
+                            <li><img src="./img/icones/velocidade.svg" width="32" height="32" alt="">50 km/h</li>
+                            <li><img src="./img/icones/rastreador.svg" width="32" height="32" alt="">Rastreador</li>
                         </ul>
-                        <img src="./img/bicicletas/nimbus.jpg" width="1120" height="680" alt="Bicicleta preta">
+                        <img src="./img/servico/nimbus.jpg" width="1120" height="680" alt="servico preta">
                     </div>
 
                     <input type="radio" name="produto" value="magic" id="magic">
                     <label for="magic">Magic Might<span>R$ 2999</span></label>
                     <div class="orcamento-detalhes">
                         <ul class="font-1-xs cor-8">
-                           <li><img src="./img/icones/eletrica.svg" width="32" height="32 alt="">Motor Elétrico</li>
-                           <li><img src="./img/icones/carbono.svg" width="32" height="32 alt="">Fibra de Carbono</li>
-                           <li><img src="./img/icones/velocidade.svg" width="32" height="32 alt="">45 km/h</li>
-                           <li><img src="./img/icones/rastreador.svg" width="32" height="32 alt="">Rastreador</li>
+                            <li><img src="./img/icones/eletrica.svg" width="32" height="32 alt="">Motor Elétrico</li>
+                           <li><img src=" ./img/icones/carbono.svg" width="32" height="32 alt="">Fibra de Carbono</li>
+                           <li><img src=" ./img/icones/velocidade.svg" width="32" height="32 alt="">45 km/h</li>
+                           <li><img src=" ./img/icones/rastreador.svg" width="32" height="32 alt="">Rastreador</li>
                         </ul>
-                        <img src="./img/bicicletas/magic.jpg" width="1120" height="680" alt="Bicicleta preta">
+                        <img src=" ./img/servico/magic.jpg" width="1120" height="680" alt="servico preta">
                     </div>
 
                     <input type="radio" name="produto" value="nebula" id="nebula">
                     <label for="nebula">Nebula Cosmic <span>R$ 3499</span></label>
                     <div class="orcamento-detalhes">
                         <ul class="font-1-xs cor-8">
-                           <li><img src="./img/icones/eletrica.svg" width="32" height="32 alt="">Motor Elétrico</li>
-                           <li><img src="./img/icones/carbono.svg" width="32" height="32 alt="">Fibra de Carbono</li>
-                           <li><img src="./img/icones/velocidade.svg" width="32" height="32 alt="">40 km/h</li>
-                           <li><img src="./img/icones/rastreador.svg" width="32" height="32 alt="">Rastreador</li>
+                            <li><img src="./img/icones/eletrica.svg" width="32" height="32 alt="">Motor Elétrico</li>
+                           <li><img src=" ./img/icones/carbono.svg" width="32" height="32 alt="">Fibra de Carbono</li>
+                           <li><img src=" ./img/icones/velocidade.svg" width="32" height="32 alt="">40 km/h</li>
+                           <li><img src=" ./img/icones/rastreador.svg" width="32" height="32 alt="">Rastreador</li>
                         </ul>
-                        <img src="./img/bicicletas/nebula.jpg" width="1120" height="680" alt="Bicicleta preta">
+                        <img src=" ./img/servico/nebula.jpg" width="1120" height="680" alt="servico preta">
                     </div>
                 </div>
 
@@ -148,7 +148,7 @@
     </main>
     <footer class="footer-bg">
         <div class="footer interface">
-            <img src="./img/bikcraft.svg" width="136" height="32 alt="logo">
+            <img src="./img/bikcraft.svg" width="136" height="32 alt=" logo">
             <div class="footer-contato">
                 <h3 class="font-2-l-b cor-0">Contato</h3>
                 <ul class="font-2-m cor-5">
@@ -161,29 +161,29 @@
                     <a href="/">
                         <img src="img/redes/instagram.svg" width="32" height="32 alt="">
                     </a>
-                    <a href="/">
+                    <a href=" /">
                         <img src="img/redes/facebook.svg" width="32" height="32 alt="">
                     </a>
-                    <a href="/">
+                    <a href=" /">
                         <img src="img/redes/youtube.svg" width="32" height="32 alt="">
                     </a>
                 </div>
             </div>
-            <div class="footer-informacoes">
-                <h3 class="font-2-l-b cor-0">Informações</h3>
-                <nav>
-                    <ul class="font-1-m cor-5">
-                        <li><a href="./bicicletas.html">Bicicletas</a></li>
-                        <li><a href="./seguros.html">Seguros</a></li>
-                        <li><a href="./contato.html">Contato</a></li>
-                        <li><a href="./termos.html">Termos e Condições</a></li>
-                    </ul>
-                </nav>
+            <div class=" footer-informacoes">
+                        <h3 class="font-2-l-b cor-0">Informações</h3>
+                        <nav>
+                            <ul class="font-1-m cor-5">
+                                <li><a href="./servico.html">servico</a></li>
+                                <li><a href="./seguros.html">Seguros</a></li>
+                                <li><a href="./contato.html">Contato</a></li>
+                                <li><a href="./termos.html">Termos e Condições</a></li>
+                            </ul>
+                        </nav>
+                </div>
+                <p class=" footer-copy font-2-m cor-6">Bikcraft © Alguns direitos reservados</p>
             </div>
-            <p class=" footer-copy font-2-m cor-6">Bikcraft © Alguns direitos reservados</p>
-        </div>
     </footer>
-             <script src="./js/script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
