--- a/sobrancelhas.html
+++ b/sobrancelhas.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobrancelhas | serviços</title>
-    <meta name="description" content="Serviços de estetica | sobrancelhas">
+    <title>Sobrancelhas | servicos</title>
+    <meta name="description" content="servicos de estetica | sobrancelhas">
     <!-- estilos -->
     <link rel="shortcut icon" href="./logo2.png" type="image/x-icon">
     <link rel="preload" href="./css/style.css" as="style">
@@ -34,16 +34,16 @@
         <div class="titulo-bg">
             <div class="titulo interface">
                 <p class="font-2-l-b cor-5">Escolha a melhor para você</p>
-                <h1 class="font-1-xxl cor-0">nossas bicicletas<span class="cor-p1">.</span></h1>
+                <h1 class="font-1-xxl cor-0">nossas servico<span class="cor-p1">.</span></h1>
             </div>
         </div>
 
-        <div class="bicicletas interface">
-            <div class="bicicletas-img">
-                <img src="./img/bicicletas/nimbus.jpg" width="1120" height="680" alt="bicicleta preta">
+        <div class="servico interface">
+            <div class="servico-img">
+                <img src="./img/servico/nimbus.jpg" width="1120" height="680" alt="servico preta">
                 <span class="font-2-m cor-0">R$ 4999</span>
             </div>
-            <div class="bicicletas-conteudo">
+            <div class="servico-conteudo">
                 <h2 class="font-1-xl">Nimbus Stark</h2>
                 <p class="font-2-s cor-8">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem
                     equipada com os melhores acessórios, o que garante maior velocidade.</p>
@@ -65,17 +65,17 @@
                         Rastreador
                     </li>
                 </ul>
-                <a class="btn-style-3" href="./bicicletas/nimbus.html">Mais Sobre</a>
+                <a class="btn-style-3" href="./servico/nimbus.html">Mais Sobre</a>
             </div>
         </div>
 
-        <div class="bicicletas-bg">
-            <div class="bicicletas interface">
-                <div class="bicicletas-img">
-                    <img src="./img/bicicletas/magic.jpg" width="1120" height="680" alt="bicicleta preta">
+        <div class="servico-bg">
+            <div class="servico interface">
+                <div class="servico-img">
+                    <img src="./img/servico/magic.jpg" width="1120" height="680" alt="servico preta">
                     <span class="font-2-m cor-0">R$ 2499</span>
                 </div>
-                <div class="bicicletas-conteudo">
+                <div class="servico-conteudo">
                     <h2 class="font-1-xl cor-0">Magic Might</h2>
                     <p class="font-2-s cor-5">A Magic Might é a melhor Bikcraft já criada pela nossa equipe. Ela vem
                         equipada com os melhores acessórios, o que garante maior velocidade.</p>
@@ -97,17 +97,17 @@
                             Rastreador
                         </li>
                     </ul>
-                    <a class="btn-style-3" href="./bicicletas/magic.html">Mais Sobre</a>
+                    <a class="btn-style-3" href="./servico/magic.html">Mais Sobre</a>
                 </div>
             </div>
         </div>
 
-        <div class="bicicletas interface">
-            <div class="bicicletas-img">
-                <img src="./img/bicicletas/nebula.jpg" width="1120" height="680" alt="bicicleta preta">
+        <div class="servico interface">
+            <div class="servico-img">
+                <img src="./img/servico/nebula.jpg" width="1120" height="680" alt="servico preta">
                 <span class="font-2-m cor-0">R$ 3999</span>
             </div>
-            <div class="bicicletas-conteudo">
+            <div class="servico-conteudo">
                 <h2 class="font-1-xl">Nebula Cosmic</h2>
                 <p class="font-2-s cor-8">A Nebula Cosmic é a melhor Bikcraft já criada pela nossa equipe. Ela vem
                     equipada com os melhores acessórios, o que garante maior velocidade.</p>
@@ -129,7 +129,7 @@
                         Rastreador
                     </li>
                 </ul>
-                <a class="btn-style-3" href="./bicicletas/nebula.html">Mais Sobre</a>
+                <a class="btn-style-3" href="./servico/nebula.html">Mais Sobre</a>
             </div>
         </div>
 
@@ -162,7 +162,7 @@
                 <h3 class="font-2-l-b cor-0">Informações</h3>
                 <nav>
                     <ul class="font-1-m cor-5">
-                        <li><a href="./bicicletas.html">Bicicletas</a></li>
+                        <li><a href="./servico.html">servico</a></li>
                         <li><a href="./seguros.html">Seguros</a></li>
                         <li><a href="./contato.html">Contato</a></li>
                         <li><a href="./termos.html">Termos e Condições</a></li>
