--- a/termos.html
+++ b/termos.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="./favicon.svg" type="image/svg+xml">
     <link rel="preload" href="./css/style.css" as="style">
     <link rel="stylesheet" href="./css/style.css">
-         <script>document.documentElement.classList.add('js')</script>
+    <script>document.documentElement.classList.add('js')</script>
 </head>
 
 <body id="termos">
@@ -22,7 +22,7 @@
 
             <nav aria-label="primaria">
                 <ul class="menu-desktop header-menu font-1-m cor-0">
-                    <li><a href="./bicicletas.html">Bicicletas</a></li>
+                    <li><a href="./servico.html">servico</a></li>
                     <li><a href="./seguros.html">Seguros</a></li>
                     <li><a href="./contato.html">Contato</a></li>
                 </ul>
@@ -39,7 +39,7 @@
 
         <div class="termos interface font-2-s cor-10">
             <h2 class="font-1-l cor-11">1. Política de Estorno</h2>
-            <p>1.1 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>  
+            <p>1.1 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
             <p>1.2 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
             <p>1.3 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
             <h2 class="font-1-l cor-11">2. Conta do Usuário</h2>
@@ -76,7 +76,7 @@
                 <h3 class="font-2-l-b cor-0">Informações</h3>
                 <nav>
                     <ul class="font-1-m cor-5">
-                        <li><a href="./bicicletas.html">Bicicletas</a></li>
+                        <li><a href="./servico.html">servico</a></li>
                         <li><a href="./seguros.html">Seguros</a></li>
                         <li><a href="./contato.html">Contato</a></li>
                         <li><a href="./termos.html">Termos e Condições</a></li>
@@ -86,7 +86,7 @@
             <p class=" footer-copy font-2-m cor-6">Bikcraft © Alguns direitos reservados</p>
         </div>
     </footer>
-             <script src="./js/script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
